201204 -fixed missind divs in lessons (for hidediv#)

--- a/lessons/giorti25mart01.htm
+++ b/lessons/giorti25mart01.htm
@@ -15,19 +15,19 @@
 <p>Παρά <span style="text-decoration: underline;">σαράντα</span> <span style="background-color: #169179;">χρόνους,</span> <strong>σκλαβιά</strong> και φυλακή<br />Να χάνωμεν' <span style="background-color: #f8cac6;">αδέλφια</span>, <strong>πατρίδα</strong> και <span style="text-decoration: underline;">γονείς</span>,<br />τους <strong>φίλους</strong>, τα <span style="background-color: #bfedd2;">παιδιά</span> μας, κι όλους τους <span style="text-decoration: underline;">συγγενείς;</span></p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div4">
 <td style="width: 8.60271%; height: 100%;">4</td>
 <td style="width: 91.3973%; height: 100%;">Να χάνωμεν' αδέλφια, <span style="text-decoration: underline;">πατρίδα</span> και <strong>γονείς</strong>,<br />τους<strong> φίλους</strong>, τα <span style="text-decoration: underline;">παιδιά</span> μας, κι όλους τους συγγενείς;<br />Κάλλιο είναι<span style="text-decoration: underline;"> μιας ώρας</span><strong> ελεύθερη</strong> ζωή,<br />παρά <strong>σαράντα χρόνους</strong>, <span style="text-decoration: underline;">σκλαβιά και φυλακή</span><br /><strong>Παρά σαράντα</strong> χρόνους, <span style="text-decoration: underline;">σκλαβιά και φυλακή</span><br />Παρά <strong>σαράντα χρόνους</strong>, σκλαβιά<span style="text-decoration: underline;"> και φυλακή</span></td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div5">
 <td style="width: 8.60271%; height: 100%;">5</td>
 <td style="width: 91.3973%; height: 100%;"> </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div6">
 <td style="width: 8.60271%; height: 100%;">6</td>
 <td style="width: 91.3973%; height: 100%;"> </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div7">
 <td style="width: 8.60271%; height: 100%;">7</td>
 <td style="width: 91.3973%; height: 100%;"> </td>
 </tr>
