--- a/lessons/giorti_apokries01.htm
+++ b/lessons/giorti_apokries01.htm
@@ -18,25 +18,25 @@
 <p>Τις μέρες αυτές γίνεται το έθιμο του <span style="background-color: #f1c40f;">γλεντιού</span>, της ψυχαγωγίας και του <strong>«μασκαρεματος»</strong>, της<br /><strong>μεταμφίεσης</strong>, που έχει <span style="background-color: #3598db;">παραμείνει</span> Κρόνια «Λουπερκάλια» και «Σατουρνάλια» και από τις<br />αρχαιότερες «Διονυσιακές γιορτές» των <strong>Ελλήνων</strong>, όπου <span style="text-decoration: underline;">οι άνθρωποι <span style="background-color: #2dc26b;">μεταμφιέζονταν</span>, χόρευαν,<br />τραγουδούσαν πίνοντας κρασί και το <span style="background-color: #b96ad9;">κέφι</span> έφτανε στο κατακόρυφο προς τιμή του <strong>Διόνυσου</strong>.</span></p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div4">
 <td style="width: 8.60271%; height: 100%;">4</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Η πρώτη εβδομάδα των <strong>Αποκριών</strong> που τελειώνει την <span style="background-color: #f1c40f;">Κυριακή</span> του Ασώτου, λέγεται<br />και Προφωνή, επειδή παλιά προφωνούσαν, δηλαδή <span style="background-color: #2dc26b;">διαλαλούσαν</span> ότι άρχιζαν οι <strong>Απόκριες</strong>.</p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div5">
 <td style="width: 8.60271%; height: 100%;">5</td>
 <td style="width: 91.3973%; height: 100%;">
 <p><br />Η <span style="background-color: #f1c40f;">δεύτερη</span> εβδομάδα λέγεται Κρεατινή ή της Κρεοφάγου, επειδή <strong>έτρωγαν κρέας</strong> και δεν <br />νήστευαν ούτε την Τετάρτη ή την Παρασκευή. Η <span style="background-color: #3598db;">εβδομάδα</span> αυτή <strong>γιορτάζεται</strong> με γλέντια<br />και φαγοπότια χωρίς κανένα<strong> θρησκευτικό</strong> περιορισμό. Η <span style="background-color: #2dc26b;">Κυριακή</span> της εβδομάδας αυτής, <br />η <span style="background-color: #f1c40f;">Κυριακή</span> της Απόκρεω -και συνεκδοχικά <strong>ολόκληρη</strong> η περίοδος από την είσοδο του <br />Τριωδίου μέχρι την <span style="background-color: #3598db;">Καθαρά Δευτέρα</span>- ονομάστηκε έτσι, επειδή <strong>συνηθίζεται</strong> να μην τρώνε <br />κρέας οι <strong>Χριστιανοί</strong>, δηλαδή «<span style="background-color: #b96ad9;">να απέχουν</span> από το κρέας».</p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div6">
 <td style="width: 8.60271%; height: 100%;">6</td>
 <td style="width: 91.3973%; height: 100%;">
 <p><br />Η <strong>τρίτη</strong> εβδομάδα λέγεται Τυρινή ή της Τυροφάγου, επειδή έτρωγαν <span style="background-color: #f1c40f;">γαλακτοκομικά</span> προϊόντα σαν <br />ενδιάμεση κατάσταση μεταξύ κρεοφαγίας και νηστείας, για να <strong>προετοιμαστούν</strong> σιγά - σιγά για τη νηστεία της <span style="background-color: #3598db;">Σαρακοστής</span>.</p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div7">
 <td style="width: 8.60271%; height: 100%;">7</td>
 <td style="width: 91.3973%; height: 100%;"> </td>
 </tr>
