--- a/lessons/giorti_pasxa01.htm
+++ b/lessons/giorti_pasxa01.htm
@@ -18,27 +18,27 @@
 <p>Το <strong>Χριστιανικό Πάσχα</strong>, ή κοινώς Πασχαλιά ή Λαμπρή, και ειδικότερα η <span style="background-color: #2dc26b;">Ανάσταση</span> του Χριστού <br />ή απλώς <strong>Ανάσταση</strong>, είναι η <span style="background-color: #eccafa;">σπουδαιότερη</span> γιορτή του χριστιανικού εκκλησιαστικού έτους. <br />Γιορτάζεται την <strong>πρώτη Κυριακή</strong> <span style="text-decoration: underline;">μετά την πανσέληνο</span> που ακολουθεί την <span style="background-color: #e03e2d;">εαρινή ισημερία.</span> <br />H <span style="background-color: #2dc26b;">Ορθόδοξη</span> Εκκλησία γιορτάζει το Πάσχα την <strong>πρώτη Κυριακή</strong> μετά την Ιουλιανή (ή Μετώνεια) <br />Πανσέληνο που <strong>ακολουθεί</strong> την <span style="background-color: #eccafa;">εαρινή ισημερία</span> σύμφωνα με το Ιουλιανό Ημερολόγιο. <br />Γιορτάζεται η <span style="background-color: #e03e2d;">ανάσταση</span> του<strong> Ιησού Χριστού  </strong></p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div4">
 <td style="width: 8.60271%; height: 100%;">4</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Με τον όρο <span style="background-color: #e03e2d;">Ανάσταση</span> αναφερόμαστε είτε στην εβδομάδα της Ανάστασης μέχρι το Σάββατο <br />της <span style="background-color: #eccafa;">Διακαινησίμου</span>, είτε στην περίοδο των 50 ημερών που ακολουθούν την εορτή της <br /><span style="background-color: #3598db;">Ανάστασης</span>, όπου και η καλούμενη τελευταία ημέρα (αριθμητικά) Πεντηκοστή.  </p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div5">
 <td style="width: 8.60271%; height: 100%;">5</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Η εορτή της <span style="background-color: #e03e2d;">Ανάστασης</span> του Ιησού Χριστού, λόγω της σπουδαιότητάς της, επηρεάζει το <br />εορτολόγιο της <span style="background-color: #3598db;">Ορθοδόξου</span> Εκκλησίας τόσο 40 ημέρες πριν από αυτό (Μεγάλη <br />Τεσσαρακοστή, <span style="background-color: #eccafa;">Τριώδιο</span>) όσο και 50 ημέρες μετά (περίοδος Πεντηκοσταρίου). <br />Οι ακολουθίες που τελούνται τότε έχουν <span style="background-color: #e03e2d;">αρχαιοπρέπεια</span> (ανάγονται στους πρώτους <br />αιώνες του Χριστιανισμού όπως η αφή του Αγίου Φωτός), <span style="background-color: #3598db;">κατάνυξη</span> και λαμπρότητα,<br />και <span style="background-color: #2dc26b;">περιγράφονται</span> λεπτομερώς στο τυπικό της Εκκλησίας.  </p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div6">
 <td style="width: 8.60271%; height: 100%;">6</td>
 <td style="width: 91.3973%; height: 100%;">
 <p> </p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div7">
 <td style="width: 8.60271%; height: 100%;">7</td>
-<td style="width: 91.3973%; height: 100%;"> </td>
+<td style="width: 91.3973%; height: 100%;">- <strong>Διαλυτικά:</strong> [για Linux + Win ] <span style="background-color: #e03e2d;">ταυτόχρονα Shift + ‘τόνος’ και μετά το φωνήεν.</span><br />- Διαλυτικά και τόνος όπως “Μαΐου”:  [για Linux] ταυτόχρονα Shift+ ‘τόνος‘, μετά ξανά ‘τόνος’ και μετά το φωνήεν.<br /><br /></td>
 </tr>
 </tbody>
 </table>
