--- a/lessons/giorti_pasxa02.htm
+++ b/lessons/giorti_pasxa02.htm
@@ -12,27 +12,27 @@
 <td style="width: 8.60271%; height: 100%;">3</td>
 <td style="width: 91.3973%; height: 100%;">Δεύτε, πάντες οι πιστοί, προσκυνήσωμεν<br />την του Χριστού Αγίαν Ανάστασην.<br />Ιδού γαρ ήλθε δια του Σταυρού<br />χαρά εν όλω τω κόσμω.<br /> <br />Δια παντός ευλογούντες τον Κύριον,<br />υμνούμεν την Ανάστασην Αυτού.<br />Σταυρόν γαρ υπομείνας δι' ημάς,<br />θανάτω, θάνατον ώλεσεν.</td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div4">
 <td style="width: 8.60271%; height: 100%;">4</td>
 <td style="width: 91.3973%; height: 100%;">
 <p> </p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div5">
 <td style="width: 8.60271%; height: 100%;">5</td>
 <td style="width: 91.3973%; height: 100%;">
 <p> </p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div6">
 <td style="width: 8.60271%; height: 100%;">6</td>
 <td style="width: 91.3973%; height: 100%;">
 <p> </p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div7">
 <td style="width: 8.60271%; height: 100%;">7</td>
-<td style="width: 91.3973%; height: 100%;"> </td>
+<td style="width: 91.3973%; height: 100%;">- <strong>Διαλυτικά:</strong> [για Linux + Win ] <span style="background-color: #e03e2d;">ταυτόχρονα Shift + ‘τόνος’ και μετά το φωνήεν.</span><br />- Διαλυτικά και τόνος όπως “Μαΐου”:  [για Linux] ταυτόχρονα Shift+ ‘τόνος‘, μετά ξανά ‘τόνος’ και μετά το φωνήεν.<br /><br /></td>
 </tr>
 </tbody>
 </table>
