--- a/lessons/lesson05.htm
+++ b/lessons/lesson05.htm
@@ -15,19 +15,19 @@
 <p><span style="color: #843fa1;">Πρόθυµα ο<em><strong> Ιάσονας</strong></em> την πήρε στους ώµους του.</span> Προσπαθώντας <br /><span style="color: #e03e2d;">όµως να περάσει το ποτάµι έχασε</span> το ένα του <em><strong>σανδάλι</strong> </em>κι έφτασε <br /><span style="color: #236fa1;">στην πόλη µονοσάνδαλος</span>.<span class="indent">Ο θείος</span> του όµως, <strong><em>ο Πελίας</em>,</strong> είχε πάρει <br /><span style="color: #169179;">χρησµό από το <span style="text-decoration: underline;"><strong>µαντείο των Δελφών</strong></span> </span>που του έλεγε: <br /><span style="color: #236fa1;">«να φοβάσαι το <span style="text-decoration: underline;"><em>µονοσάνδαλο</em></span>»</span>!</p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div4">
 <td style="width: 8.60271%; height: 100%;">4</td>
 <td style="width: 91.3973%; height: 100%;">Όταν λοιπόν είδε το παλικάρι µε το ένα σανδάλι, κατάλαβε αµέσως ποιος <br />ήταν και ταράχτηκε πολύ. Κι όταν ο Ιάσονας του ζήτησε το θρόνο του πατέρα<br />του, του είπε ότι θα του τον έδινε, αν του έφερνε από την Κολχίδα το <strong>χρυσόµαλλο δέρας.</strong></td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div5">
 <td style="width: 8.60271%; height: 100%;">5</td>
 <td style="width: 91.3973%; height: 100%;"> </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div6">
 <td style="width: 8.60271%; height: 100%;">6</td>
 <td style="width: 91.3973%; height: 100%;"> </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div7">
 <td style="width: 8.60271%; height: 100%;">7</td>
 <td style="width: 91.3973%; height: 100%;"> </td>
 </tr>
