--- a/lessons/month_apr.htm
+++ b/lessons/month_apr.htm
@@ -24,21 +24,17 @@
 <p>Ο <strong>Απρίλης</strong> είναι ο κατ’ εξοχήν μήνας όπου γιορτάζεται το <span style="background-color: #e03e2d;">Πάσχα</span>, αν και ορισμένες φορές το<br /><strong><span style="background-color: #2dc26b;">Ορθόδοξο</span> Πάσχα</strong> μπορεί να γιορταστεί μέχρι και στις 8 Μαΐου (όπως έγινε το 1983). Το Πάσχα<br />έχει τις ρίζες του στην αρχαία <span style="background-color: #3598db;">Αίγυπτο</span>, όπου <strong>γιορτάζονταν</strong> η εαρινή ισημερία, κι από εκεί πέρασε<br />στους Εβραίους ως «Πεσάχ», σε ανάμνηση της <span style="background-color: #b96ad9;">Εξόδου</span> τους από την αιχμαλωσία, και τέλος έφτασε<br />και στους χριστιανούς αφού ταυτίστηκε με τον σταυρικό θάνατο Του <span style="background-color: #f1c40f;">Ιησού</span> Χριστού την περίοδο<br />του Εβραϊκού Πάσχα, το οποίο <span style="background-color: #3598db;">γιορταζόταν</span> κατά την ημέρα της πρώτης εαρινής πανσελήνου.</p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div5">
 <td style="width: 8.60271%; height: 100%;">5</td>
-<td style="width: 91.3973%; height: 100%;">
-<p> </p>
-</td>
+<td style="width: 91.3973%; height: 100%;"><p>_</p> </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div6">
 <td style="width: 8.60271%; height: 100%;">6</td>
-<td style="width: 91.3973%; height: 100%;">
-<p> </p>
-</td>
+<td style="width: 91.3973%; height: 100%;"><p>_</p> </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div7">
 <td style="width: 8.60271%; height: 100%;">7</td>
-<td style="width: 91.3973%; height: 100%;"> </td>
+<td style="width: 91.3973%; height: 100%;"><p>_</p> </td>
 </tr>
 </tbody>
 </table>
