--- a/lessons/month_feb.htm
+++ b/lessons/month_feb.htm
@@ -31,15 +31,13 @@
 <p>διάρκεια ίση με 365,242 ημέρες), θέσπισε ένα ημερολόγιο του οποίου τα έτη είχαν 365 ημέρες, <br />ενώ σε κάθε τέταρτο έτος πρόσθεταν ακόμη μία ημέρα, μετά την "έκτη προ των καλενδών του <br />Μαρτίου", που ονομαζόταν «bis sextus». Έτσι η ημέρα αυτή, επειδή μετριόταν δύο φορές, ονομάζεται <br />ακόμη και σήμερα "δις έκτη" και το έτος που την περιέχει «δίσεκτο».</p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div6">
 <td style="width: 8.60271%; height: 100%;">6</td>
-<td style="width: 91.3973%; height: 100%;">
-<p> </p>
-</td>
+<td style="width: 91.3973%; height: 100%;"><p>_</p> </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div7">
 <td style="width: 8.60271%; height: 100%;">7</td>
-<td style="width: 91.3973%; height: 100%;"> </td>
+<td style="width: 91.3973%; height: 100%;"><p>_</p> </td>
 </tr>
 </tbody>
 </table>
