--- a/lessons/text_tsanta_sxoleio.htm
+++ b/lessons/text_tsanta_sxoleio.htm
@@ -18,25 +18,25 @@
 <p>Σκοπός της <strong>δράσης</strong> αυτής είναι οι <span style="background-color: #b96ad9;">μαθητές/τριες</span> να μην<span style="text-decoration: underline;"> ασχολούνται</span> με την προετοιμασία<br />μαθημάτων κατά τη <span style="text-decoration: underline;">διάρκεια</span> του <strong>Σαββατοκύριακου</strong> και να<span style="background-color: #2dc26b;"> αφιερωθεί</span> αυτός ο χρόνος στη <br />δημιουργική<span style="text-decoration: underline;"> επαφή</span> και <strong>επικοινωνία</strong> <span style="background-color: #3598db;">γονέων</span> – παιδιών.</p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div4">
 <td style="width: 8.60271%; height: 100%;">4</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Εμείς ως <strong>Σύλλογος</strong> Διδασκόντων<span style="text-decoration: underline;"> αποφασίσαμε</span> να <span style="background-color: #b96ad9;">εφαρμόσουμε</span> αυτή τη δράση κάθε τελευταία<br />Παρασκευή του μήνα και <strong>ευελπιστούμε</strong> τα <span style="text-decoration: underline;">Σαββατοκύριακα</span> αυτά να τα περνάτε <span style="background-color: #f1c40f;">ευχάριστα</span> και <br />δημιουργικά με τα <strong>παιδιά</strong> σας. Η Δ/ντρια και το <span style="text-decoration: underline;">Διδακτικό</span> <span style="background-color: #2dc26b;">Προσωπικό.</span></p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div5">
 <td style="width: 8.60271%; height: 100%;">5</td>
 <td style="width: 91.3973%; height: 100%;">
 <p> </p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div6">
 <td style="width: 8.60271%; height: 100%;">6</td>
 <td style="width: 91.3973%; height: 100%;">
 <p> </p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div7">
 <td style="width: 8.60271%; height: 100%;">7</td>
 <td style="width: 91.3973%; height: 100%;"> </td>
 </tr>
