--- a/lessons/lesson11.htm
+++ b/lessons/lesson11.htm
@@ -14,31 +14,23 @@
 </tr>
 <tr style="height: 100%;" id="div3">
 <td style="width: 8.60271%; height: 100%;">3</td>
-<td style="width: 91.3973%; height: 100%;">
-<p> </p>
-</td>
+<td style="width: 91.3973%; height: 100%;"><p>_</p></td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div4">
 <td style="width: 8.60271%; height: 100%;">4</td>
-<td style="width: 91.3973%; height: 100%;">
-<p> </p>
-</td>
+<td style="width: 91.3973%; height: 100%;"><p>_</p></td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div5">
 <td style="width: 8.60271%; height: 100%;">5</td>
-<td style="width: 91.3973%; height: 100%;">
-<p> </p>
-</td>
+<td style="width: 91.3973%; height: 100%;"><p>_</p> </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div6">
 <td style="width: 8.60271%; height: 100%;">6</td>
-<td style="width: 91.3973%; height: 100%;">
-<p> </p>
-</td>
+<td style="width: 91.3973%; height: 100%;"><p>_</p> </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div7">
 <td style="width: 8.60271%; height: 100%;">7</td>
-<td style="width: 91.3973%; height: 100%;"> </td>
+<td style="width: 91.3973%; height: 100%;"><p>_</p> </td>
 </tr>
 </tbody>
 </table>
