--- a/lessons/song_synnefoula.htm
+++ b/lessons/song_synnefoula.htm
@@ -18,27 +18,25 @@
 <p><span style="background-color: #2dc26b;">Κι έρχεται ο Απρίλης αχ καρδούλα μου</span><br /><span style="background-color: #f1c40f;">να κι ο Μάης συννεφούλα μου.</span><br /><span style="background-color: #e03e2d;">Δίχως τραγούδι, δάκρυ και φιλί</span><br /><span style="background-color: #b96ad9;">δεν είναι άνοιξη φέτος αυτή.</span><br /> </p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div4">
 <td style="width: 8.60271%; height: 100%;">4</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Συννεφούλα, συννεφούλα να γυρίσεις σου ζητώ<br />και τριγύρνα μ’ όσους θέλεις κάθε βράδυ.<br />Δεν αντέχω άλλο να ‘μαι μοναχός<br />μ’ αγαπάς τη μια κι ας με ξεχνάς την άλλη.<br /> </p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div5">
 <td style="width: 8.60271%; height: 100%;">5</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Συννεφούλα :  https://youtu.be/B49GtymQIDE</p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div6">
 <td style="width: 8.60271%; height: 100%;">6</td>
-<td style="width: 91.3973%; height: 100%;">
-<p> </p>
-</td>
+<td style="width: 91.3973%; height: 100%;"><p>_</p> </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div7">
 <td style="width: 8.60271%; height: 100%;">7</td>
-<td style="width: 91.3973%; height: 100%;"> </td>
+<td style="width: 91.3973%; height: 100%;"><p>_</p> </td>
 </tr>
 </tbody>
 </table>
