--- a/lessons/xmas_rudolf.htm
+++ b/lessons/xmas_rudolf.htm
@@ -12,23 +12,23 @@
 <td style="width: 8.60271%; height: 100%;">3</td>
 <td style="width: 91.3973%; height: 100%;">Όμως μια <strong>πρωτοχρονιά</strong><br />είπε ο<strong> Άϊ Βασίλης...</strong><br />"Ρ<strong>ούντολφ</strong>, είσαι εσύ σοφός<br />έχεις μέσα σου το<strong> φως</strong>".</td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div4">
 <td style="width: 8.60271%; height: 100%;">4</td>
 <td style="width: 91.3973%; height: 100%;">Τα <span style="text-decoration: underline;">ελάφια</span> στο κοπάδι<br />χαμηλώσανε τ’<span style="text-decoration: underline;"> αυτιά</span><br />τώρα <span style="text-decoration: underline;">απαλή</span> σαν χάδι<br />είναι όλων η<span style="text-decoration: underline;"> ματιά.</span></td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div5">
 <td style="width: 8.60271%; height: 100%;">5</td>
 <td style="width: 91.3973%; height: 100%;">Από τότε και κάθε καινούρια χρονιά<br />του έλκηθρου πρώτος τραβά τα σκοινιά...<br />Ο Ρούντολφ οδηγεί<br />τον Άϊ Βασίλη στη γη!</td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div6">
 <td style="width: 8.60271%; height: 100%;">6</td>
 <td style="width: 91.3973%; height: 100%;">
-<p> </p>
+<p>_</p>
 </td>
 </tr>
 <tr style="height: 100%;">
 <td style="width: 8.60271%; height: 100%;">7</td>
-<td style="width: 91.3973%; height: 100%;">- <strong>Διαλυτικά:</strong> [για Linux + Win ] <span style="background-color: #e03e2d;">ταυτόχρονα Shift + ‘τόνος’ και μετά το φωνήεν.</span><br />- Διαλυτικά και τόνος όπως “Μαΐου”:    [για Linux] ταυτόχρονα Shift+ ‘τόνος‘, μετά ξανά ‘τόνος’ και μετά το φωνήεν.<br /><br /></td>
+<td style="width: 91.3973%; height: 100%;">- <strong>Διαλυτικά:</strong> [για Linux + Win ] <span style="background-color: #e03e2d;">ταυτόχρονα Shift + ‘τόνος’ και μετά το φωνήεν.</span><br />- Διαλυτικά και τόνος όπως “Μαΐου”:  [για Linux] ταυτόχρονα Shift+ ‘τόνος‘, μετά ξανά ‘τόνος’ και μετά το φωνήεν.<br /><br /></td>
 </tr>
 </tbody>
 </table>
