--- a/lessons/xmas_trigona.htm
+++ b/lessons/xmas_trigona.htm
@@ -18,27 +18,27 @@
 <p>Τρέχουν τα παιδιά μέσα στο χιονιά ήρθαν τα Χριστούγεννα κι η Πρωτοχρονιά<br />μες στη σιγαλιά, ανοίγει η αγκαλιά κι έκανε η αγάπη την καρδιά φωλιά  </p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div4">
 <td style="width: 8.60271%; height: 100%;">4</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Τρίγωνα, κάλαντα σκόρπισαν παντού κάθε σπίτι μια φωλιά του μικρού Χριστού<br />τρίγωνα, κάλαντα μες στη γειτονιά ήρθαν τα Χριστούγεννα κι η Πρωτοχρονιά.. </p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div5">
 <td style="width: 8.60271%; height: 100%;">5</td>
 <td style="width: 91.3973%; height: 100%;">
 <p> </p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div6">
 <td style="width: 8.60271%; height: 100%;">6</td>
 <td style="width: 91.3973%; height: 100%;">
 <p> </p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div7">
 <td style="width: 8.60271%; height: 100%;">7</td>
-<td style="width: 91.3973%; height: 100%;"> </td>
+<td style="width: 91.3973%; height: 100%;">- <strong>Διαλυτικά:</strong> [για Linux + Win ] <span style="background-color: #e03e2d;">ταυτόχρονα Shift + ‘τόνος’ και μετά το φωνήεν.</span><br />- Διαλυτικά και τόνος όπως “Μαΐου”:  [για Linux] ταυτόχρονα Shift+ ‘τόνος‘, μετά ξανά ‘τόνος’ και μετά το φωνήεν.<br /><br /></td>
 </tr>
 </tbody>
 </table>
