--- a/tinymce.html
+++ b/tinymce.html
@@ -34,6 +34,30 @@
 <body>
   <form>
   <textarea name="text_entered" id="text_entered" ></textarea>
+	 		<div id="div-submit" ><!------------------------------div-submit -->
+		<label for="name">ΟΝΟΜΑ ΣΧΟΛΕΙΟΥ:</label>
+		<input type="text" id="schoolname" name="schoolname" size=15>
+		<br>
+		<br> ΤΑΞΗ:
+		<select name="taksi" id="taksi">
+			<option value="Α">Α</option>
+			<option value="Β">Β</option>
+			<option value="Γ">Γ</option>
+			<option value="Δ">Δ</option>
+			<option value="Ε">Ε</option>
+			<option value="ΣΤ">ΣΤ</option>
+		</select> ΤΜΗΜΑ:
+		<select name="tmima" id="tmima">
+			<option value="1">1</option>
+			<option value="2">2</option>
+		</select>
+		<BR>
+		<label for="name">ΟΝΟΜΑ(ΤΑ):</label>
+		<input type="text" id="name" name="name" size=60>
+		<br>
+		<br>
+		<input type="submit" value="ΥΠΟΒΟΛΗ"> 
+		</div><!--------------------------------------------div-submit --> 
   </form>
   <hr>
   <p onselectstart="return false" onpaste="return false;" onCopy="return false" onCut="return false" onDrag="return false" onDrop="return false" >
