221214 - added PC number dropdown , tinymce & tinymc_submit are the same. Use &showsubmit for form

--- a/tinymce_submit.html
+++ b/tinymce_submit.html
@@ -8,6 +8,8 @@
   </script>
 
 Changes:
+-221213 - Added PC number drop box for PC number
+-221013 - both tinymce.html & tinymce_submit are the same (both hide submit and need ?showsubmit param )
 -201019 - hidesubmit option
 
 -->
@@ -57,6 +59,26 @@ Changes:
 			<option value="2">2</option>
 		</select>
 		<BR>
+		PC Αριθμός:
+		<select name="pc" id="pc">
+			<option value="00">ΕΠΙΛΕΞΤΕ</option>
+			<option value="01">1</option>
+			<option value="02">2</option>
+			<option value="03">3</option>
+			<option value="04">4</option>
+			<option value="05">5</option>
+			<option value="06">6</option>
+			<option value="07">7</option>
+			<option value="08">8</option>
+			<option value="09">9</option>
+			<option value="10">10</option>
+			<option value="11">11</option>
+			<option value="12">12</option>
+			<option value="13">13</option>
+			<option value="14">14</option>
+			<option value="15">15</option>
+			<option value="16">16</option>
+		</select>			
 		<label for="name">ΟΝΟΜΑ(ΤΑ):</label>
 		<input type="text" id="name" name="name" size=60>
 		<br>
