--- a/tinymce.html
+++ b/tinymce.html
@@ -3,9 +3,16 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
  <!-- <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin">
-  	
+ 
+ 
+  </script>
 
-  </script>-->
+Changes:
+-221213 - Added PC number drop box for PC number
+-221013 - both tinymce.html & tinymce_submit are the same (both hide submit and need ?showsubmit param )
+-201019 - hidesubmit option
+
+-->
   <script src="js/tinymce/tinymce.min.js" referrerpolicy="origin">
 
   </script>
@@ -32,9 +39,9 @@
 </script>
 </head>
 <body>
-  <form>
-  <textarea name="text_entered" id="text_entered" ></textarea>
-	 		<div id="div-submit" ><!------------------------------div-submit -->
+	<form action="handle-submit.php" method="post" onsubmit="tinyMCE.triggerSave()">
+		<textarea name="text_entered" id="text_entered"  ></textarea>
+		<div id="div-submit" ><!------------------------------div-submit -->
 		<label for="name">ΟΝΟΜΑ ΣΧΟΛΕΙΟΥ:</label>
 		<input type="text" id="schoolname" name="schoolname" size=15>
 		<br>
@@ -52,13 +59,33 @@
 			<option value="2">2</option>
 		</select>
 		<BR>
+		PC Αριθμός:
+		<select name="pc" id="pc">
+			<option value="00">ΕΠΙΛΕΞΤΕ</option>
+			<option value="01">1</option>
+			<option value="02">2</option>
+			<option value="03">3</option>
+			<option value="04">4</option>
+			<option value="05">5</option>
+			<option value="06">6</option>
+			<option value="07">7</option>
+			<option value="08">8</option>
+			<option value="09">9</option>
+			<option value="10">10</option>
+			<option value="11">11</option>
+			<option value="12">12</option>
+			<option value="13">13</option>
+			<option value="14">14</option>
+			<option value="15">15</option>
+			<option value="16">16</option>
+		</select>			
 		<label for="name">ΟΝΟΜΑ(ΤΑ):</label>
 		<input type="text" id="name" name="name" size=60>
 		<br>
 		<br>
 		<input type="submit" value="ΥΠΟΒΟΛΗ"> 
-		</div><!--------------------------------------------div-submit --> 
-  </form>
+		</div><!--------------------------------------------div-submit -->
+	</form>
   <hr>
   <p onselectstart="return false" onpaste="return false;" onCopy="return false" onCut="return false" onDrag="return false" onDrop="return false" >
   <div id="probeserver" onselectstart="return false" onpaste="return false;" onCopy="return false" onCut="return false" onDrag="return false" onDrop="return false" ></div>
